[gd_scene load_steps=10 format=2]

[ext_resource path="res://gui/gui.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://icon_add_unit/icon_add_unit.tscn" type="PackedScene" id=3]
[ext_resource path="res://resource/icon_drone_blue_plus.png" type="Texture" id=4]
[ext_resource path="res://resource/icon_drone_blue_plus_pressed.png" type="Texture" id=5]
[ext_resource path="res://resource/icon_angel_blue_plus.png" type="Texture" id=6]
[ext_resource path="res://resource/icon_angel_blue_plus_pressed.png" type="Texture" id=7]
[ext_resource path="res://resource/turn.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]

size = 50
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="GUI" type="Container"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Anchor", "Margin", "Mouse", "custom_constants" ]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
_sections_unfolded = [ "Anchor", "Margin", "Mouse", "custom_constants" ]

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 20.0
margin_right = 1900.0
margin_bottom = 1060.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
_sections_unfolded = [ "Mouse" ]

[node name="TopPanel" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1880.0
margin_bottom = 61.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 8
alignment = 2
_sections_unfolded = [ "Mouse", "Size Flags" ]

[node name="Left" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TopPanel"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 938.0
margin_bottom = 61.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_constants/separation = 40
alignment = 0
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="WealthIndicator" type="Label" parent="MarginContainer/VBoxContainer/TopPanel/Left"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 108.0
margin_bottom = 61.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.75, 0, 1 )
text = "300"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Right" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TopPanel"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 942.0
margin_right = 1880.0
margin_bottom = 61.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 2
_sections_unfolded = [ "Size Flags" ]

[node name="Turn" type="Label" parent="MarginContainer/VBoxContainer/TopPanel/Right"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 762.0
margin_right = 938.0
margin_bottom = 61.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Turn 1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 65.0
margin_bottom = 65.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
alignment = 0
_sections_unfolded = [ "Mouse", "Size Flags" ]

[node name="BottomPanel" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 965.0
margin_right = 1880.0
margin_bottom = 1040.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 8
alignment = 2
_sections_unfolded = [ "Mouse", "Size Flags" ]

[node name="Left" type="HBoxContainer" parent="MarginContainer/VBoxContainer/BottomPanel"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_bottom = 75.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 0
alignment = 0
_sections_unfolded = [ "Grow Direction", "Size Flags", "custom_constants" ]

[node name="ProductionIcons" type="HBoxContainer" parent="MarginContainer/VBoxContainer/BottomPanel"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 4.0
margin_right = 136.0
margin_bottom = 75.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="ProduceDrone" parent="MarginContainer/VBoxContainer/BottomPanel/ProductionIcons" instance=ExtResource( 3 )]
margin_right = 64.0
margin_bottom = 75.0
size_flags_horizontal = 1
unit_type = "drone"
texture_normal_custom = ExtResource( 4 )
texture_pressed_custom = ExtResource( 5 )

[node name="ProduceAngel" parent="MarginContainer/VBoxContainer/BottomPanel/ProductionIcons" instance=ExtResource( 3 )]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 75.0
texture_normal_custom = ExtResource( 6 )
texture_pressed_custom = ExtResource( 7 )

[node name="Right" type="HBoxContainer" parent="MarginContainer/VBoxContainer/BottomPanel"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 140.0
margin_right = 1880.0
margin_bottom = 75.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 2
_sections_unfolded = [ "Size Flags" ]

[node name="ButtonNextTurn" type="TextureButton" parent="MarginContainer/VBoxContainer/BottomPanel/Right"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1631.0
margin_right = 1740.0
margin_bottom = 75.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 8 )
_sections_unfolded = [ "Grow Direction", "Margin", "Size Flags", "Textures" ]

[connection signal="pressed" from="MarginContainer/VBoxContainer/BottomPanel/Right/ButtonNextTurn" to="." method="_on_ButtonNextTurn_pressed"]
